crates/tracexec-tui/src/snapshots/tracexec_tui__app__tests__snapshot_app_render_with_custom_theme.snap
---
source: crates/tracexec-tui/src/app.rs
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        " tracexec 0.0.0-fake                                                            ",
        "                                                                                ",
        "┌Events───────────────────────────────────────────────────────────────────1/1──┐",
        "│  123[info]: Themed event                                                     │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        "     F1  Help  F  Follow  Ctrl+F  Search  E  Hide Env  W  Hide CWD  V  View     ",
        "                                     Q  Quit                                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 3, fg: LightMagenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 3, fg: Rgb(255, 207, 90), bg: Reset, underline: Reset, modifier: BOLD,
        x: 12, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 3, fg: Rgb(255, 207, 90), bg: Reset, underline: Reset, modifier: BOLD,
        x: 26, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: Rgb(255, 176, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 22, fg: Black, bg: Yellow, underline: Reset, modifier: BOLD,
        x: 8, y: 22, fg: Rgb(255, 211, 107), bg: DarkGray, underline: Reset, modifier: BOLD | ITALIC,
        x: 14, y: 22, fg: Black, bg: Yellow, underline: Reset, modifier: BOLD,
        x: 17, y: 22, fg: Rgb(255, 211, 107), bg: DarkGray, underline: Reset, modifier: BOLD | ITALIC,
        x: 25, y: 22, fg: Black, bg: Yellow, underline: Reset, modifier: BOLD,
        x: 33, y: 22, fg: Rgb(255, 211, 107), bg: DarkGray, underline: Reset, modifier: BOLD | ITALIC,
        x: 41, y: 22, fg: Black, bg: Yellow, underline: Reset, modifier: BOLD,
        x: 44, y: 22, fg: Rgb(255, 211, 107), bg: DarkGray, underline: Reset, modifier: BOLD | ITALIC,
        x: 54, y: 22, fg: Black, bg: Yellow, underline: Reset, modifier: BOLD,
        x: 57, y: 22, fg: Rgb(255, 211, 107), bg: DarkGray, underline: Reset, modifier: BOLD | ITALIC,
        x: 67, y: 22, fg: Black, bg: Yellow, underline: Reset, modifier: BOLD,
        x: 70, y: 22, fg: Rgb(255, 211, 107), bg: DarkGray, underline: Reset, modifier: BOLD | ITALIC,
        x: 76, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 23, fg: Black, bg: Yellow, underline: Reset, modifier: BOLD,
        x: 39, y: 23, fg: Rgb(255, 211, 107), bg: DarkGray, underline: Reset, modifier: BOLD | ITALIC,
        x: 45, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
